# aiosysbus

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  _secrets.yaml  aiosysbus.code-workspace  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: auto-approve.yml  lint.yml  python-lint.yml  python-publish.yml  pythonpackage.yml  pythonpublish.yml  release.yml
aiosysbus/: __init__.py  access.py  aiosysbus.py  auth.py  exceptions.py
aiosysbus/api/: __init__.py  call.py  connection.py  device.py  dhcp.py  diagnostic.py  dnsdhcp.py  event.py  gui.py  nat.py  nemo.py  network.py  nmc.py  powermgmt.py  schedule.py  screen.py  services.py  sgcomci.py  storage.py  system.py  user.py  wifi.py
tests/: test_connection.py
