[build-system]
requires = ["setuptools","setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "aiosysbus"
dynamic = ["version"]
license     = {text = "GPL-3"}
description = "Provides asynchronous authentication and access to Livebox"
readme      = "README.md"
authors     = [
    {name = "Cyr-ius", email = "cyr-ius@ipocus.net"}
]
keywords    = ["livebox", "async"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Home Automation",
]
requires-python = ">=3.11"
dependencies    = [
    "aiohttp>=3.9.1",
    "yarl>=1.9.4",
]
[tool.setuptools_scm]

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"

[tool.ruff.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false
