[build-system]
requires = ["setuptools","setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "aiosysbus"
dynamic     = ["version"]
license     = {text = "GPL-3"}
description = "Provides asynchronous authentication and access to Livebox"
readme      = "README.md"
authors     = [
    {name = "Cyr-ius", email = "cyr-ius@ipocus.net"}
]
keywords    = ["livebox", "async"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Home Automation",
]
requires-python = ">=3.11"
dependencies    = [
    "aiohttp>=3.9.1",
    "yarl>=1.9.4",
]

[project.urls]
Homepage = "https://github.com/cyr-ius/aiosysbus"

[tool.setuptools_scm]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false
