[build-system]
requires = ["setuptools","setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "aiosysbus"
dynamic     = ["version"]
license     = "GPL-3.0-or-later"
description = "Provides asynchronous authentication and access to Livebox"
readme      = "README.md"
authors     = [
    {name = "Cyr-ius", email = "cyr-ius@ipocus.net"}
]
keywords    = ["livebox", "async"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Home Automation",
]
requires-python = ">=3.11"
dependencies    = [
    "aiohttp>=3.9.1",
    "yarl>=1.9.4",
]

[project.optional-dependencies]
dev = [
    "prek",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "python-typing-update",
    "yamllint",
]

[project.urls]
Homepage = "https://github.com/cyr-ius/aiosysbus"

[tool.setuptools_scm]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.packages.find]
exclude = ["node_modules*"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false
